# tuisic

./: Cargo.toml  README.md
src/: app.rs  info_line.rs  info_panel.rs  main.rs  music_list.rs  tui.rs
