[package]
name = "tuisic"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/saubuny/tuisic"
homepage = "https://github.com/saubuny/tuisic"
license = "MIT"
description = "A terminal music player based off your xdg music directory"
readme = "README.md"
keywords = ["music", "cli", "player", "tui"]
categories = ["command-line-utilities"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
mpv = "0.2.3"
ratatui = "0.26.1"
xdg-user = "0.2.1"
